# jarvis

./: .env.example  .gitignore  README.md  check_mic.py  csm_clone_voice.py  csm_dimitri_say.py  csm_pilot.py  csm_voice_scan.py  main.py  orpheus_voice_scan.py  pyproject.toml
ios/: README.md
ios/Jarvis/Jarvis/: CallManager.swift  ContentView.swift  JarvisApp.swift  WebRTCClient.swift
ios/Jarvis/Jarvis.xcodeproj/: project.pbxproj
jarvis/: _util.py  azure_openai_tts_service.py  azure_phraselist_stt_service.py  claude_code_llm_service.py  claude_subprocess.py  csm_tts_service.py  event_bridge.py  ndjson_parser.py  pipeline.py  session_manager.py  sessions.py  workers.py
jarvis/llm/: __init__.py  service.py  streaming.py
jarvis/stt/: __init__.py  deepgram.py  jargon.py  whisper_jargon.py
jarvis/tts/: __init__.py  azure.py  azure_openai.py  cartesia.py  mai.py
ops/: README.md  com.user.jarvis.plist
tools/: debug_audio.py  jarvis_cli.py  voice_permission_hook.py
web/: index.html
workspace/: CLAUDE.md
workspace/.claude/: settings.local.json
