[project]
name = "jarvis"
version = "0.1.0"
description = "Voice-controlled laptop assistant using Pipecat + Claude Code"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pipecat-ai[deepgram,cartesia,silero,local,mlx-whisper,kokoro,azure]>=0.0.70",
    "python-dotenv>=1.0.0",
    "csm-mlx @ git+https://github.com/senstella/csm-mlx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]
